--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-    <h1>Kalej's portfolio</h1>
-    <img src="./kalej.JPG"/>
-    
+    <h1>KaLej's Portfolio</h1>
+    <img scr="./kalej.jpg" />
 </html>
