--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-    <h1>KaLej's Portfolio</h1>
-    <img scr="./kalej.jpg" />
+    <H1>Kalej Portfolio</H1>
+    <img src="imagen/kalej.jpeg" />
 </html>
