--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-    <H1>Kalej Portfolio</H1>
+    <H1><b>Kalej Portfolio</b></H1>
+    <p>My name is Kalej Sandoval. This is my Portfolio. I will share here all my projects. 
+        I love learning new things and I discovered in programming a challenge to continue acquiring valuable skills that allow me to develop successfully in this field.</p>
     <img src="imagen/kalej.jpeg" />
 </html>
