--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="https://github.com/Kalejsandoval/PacMan">PacMan game</a>
                
                 <p>The eyes is the representation of the mouse over eyes and they follow the mouse cursor.</p>
-                <a href=https://github.com/Kalejsandoval/Eye--Exercise>Eye-Exercise</a>
+                <a href=https://github.com/Kalejsandoval/Eye--Exercise>Eye Exercise</a>
                
                 <p>It is an application that follows the movement of the bus between different stops.</p>
                 <a href="https://github.com/Kalejsandoval/Real-TIme-Bus-Tracker">Real-Time Bus Tracker</a>
