--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                           <h5 class="Watch my video here!"></h5>   
                                                 
                                                  
-        <a href="https://www.youtube.com/watch?v=x2I0P1Y-VD0" id="links">Watch my video here!</a>
+        <a href="https://youtu.be/Zz8HMK3q110" id="links">Watch my video here!</a>
         <i class="fa-brands fa-square-youtube"></i> 
                         </div>
                       </div>
