--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1>Projects </h1>
                
                 <p>This file includes a link to part of the classic PacMen where this character you must eat all the cookies and not let the monsters reach you or the game ends.</p>
-                <a href="https://github.com/Kalejsandoval/PacMen-Exercise>PacMen Exercise">PacMen Exercise</a>
+                <a href="https://github.com/Kalejsandoval/PacMen-Exercise">PacMen Exercise</a>
                
                 <p>The eyes is the representation of the mouse over eyes and they follow the mouse cursor.</p>
                 <a href="https://github.com/Kalejsandoval/Eye--Exercise">Eye Exercise</a>
